cluster/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      nodeSelector:
        # Ensures the pod runs on the node with the USB device and host paths
        kubernetes.io/hostname: jaysdesktop
      containers:
        - name: plex
          image: plexinc/pms-docker:1.43.4.10903-e5521bd8c
          ports:
            - name: plex
              containerPort: 32400
            # Host ports for local network access
            - name: dlna-udp
              containerPort: 1900
              hostPort: 1900
              protocol: UDP
            - name: bonjour-avahi
              containerPort: 5353
              hostPort: 5353
              protocol: UDP
            - name: plex-companion
              containerPort: 8324
              hostPort: 8324
            - name: gdm-discovery-1
              containerPort: 32410
              hostPort: 32410
              protocol: UDP
            - name: gdm-discovery-2
              containerPort: 32412
              hostPort: 32412
              protocol: UDP
            - name: gdm-discovery-3
              containerPort: 32413
              hostPort: 32413
              protocol: UDP
            - name: gdm-discovery-4
              containerPort: 32414
              hostPort: 32414
              protocol: UDP
            - name: dlna-tcp
              containerPort: 32469
              hostPort: 32469
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "4"
              memory: 4Gi
          securityContext:
            privileged: true # For usb device access
          volumeMounts:
            - name: config
              mountPath: /config
            - name: audio
              mountPath: /data/Audio
              readOnly: true
            - name: video
              mountPath: /data/Video
              readOnly: true
            - name: image
              mountPath: /data/Image
              readOnly: true
            - name: usb-tv-tuner
              mountPath: /dev/bus/usb/001/002
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: audio
          persistentVolumeClaim:
            claimName: audio
        - name: video
          persistentVolumeClaim:
            claimName: video
        - name: image
          persistentVolumeClaim:
            claimName: image
        - name: usb-tv-tuner
          hostPath:
            path: /dev/bus/usb/001/002
            type: CharDevice
